adicionando banner de video

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,11 @@
     --white-color: #fff;
     --body-color: hsl(0, 0%, 0%);
     --bg-color: rgba(17, 17, 17, 0.95);
-    --bg-color2: rgba(174, 203, 255, 0.95);
     --gold-color: hsl(36, 66%, 53%);
+    --blue-light: hsla(219, 100%, 84%, 0.949);
+    --blue-login: rgb(28, 100, 255);
+    --blue-dark-menu: rgb(55, 94, 168);
+    
   
     /*==== gradiente ====*/
     --gradient1: linear-gradient(
@@ -195,6 +198,21 @@
     transform: scale(1.05);
 }
 
+.search-btn {
+  background-color: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1.6rem;
+  color: white;
+  margin-left: 1rem;
+  transition: transform 0.2s ease, color 0.3s ease;
+}
+
+.search-btn:hover {
+    transform: scale(1.2);
+    color: var(--blue-login);
+}
+
 /*-----------------------------------*\
     #HEADER
 \*-----------------------------------*/
@@ -203,6 +221,7 @@
 .dropdown-menu {
     display: none;
 }
+
 
 .logo img {
     width: 160px;
@@ -216,10 +235,10 @@
     top: 0;
     left: 0;
     width: 100%;
-    background: var(--bg-color2);
+    background: var(--blue-light);
     padding: 10px 12px;
     z-index: 4;
-    box-shadow: var(--shadow2);
+    box-shadow: 0 8px 20px rgba(180, 198, 255, 0.6);
 }
 
 .header.active {
@@ -234,4 +253,98 @@
     100% {
         transform: translateY(0);
     }
+}
+
+.navbar {
+  position: absolute;
+  right: 12px;
+  left: 12px;
+  background: var(--black-color-light);
+  padding: 0 15px;
+}
+
+.navbar-link {
+  padding: 12px 25px;
+  text-transform: uppercase;
+  font-size: var(--fs-8);
+  font-weight: var(--weight-semiBold);
+  color: white;
+  transition: color 0.3s ease;
+}
+
+.navbar-link:hover {
+  color:  var(--blue-login);
+}
+
+.navbar,
+.navbar.active {
+  all: unset;
+  display: block;
+}
+
+.navbar-list {
+  display: flex;
+}
+
+.navbar-item {
+  border: none;
+}
+
+.header .btn {
+  display: grid;
+  text-align: center;
+}
+
+.dropdown-toggle {
+  display: flex;
+  align-items: center;
+  gap: 0.4rem;
+}
+
+.dropdown-item {
+  position: relative;
+}
+
+.dropdown-menu {
+  position: absolute;
+  top: 120%;
+  left: 0;
+  background-color: var(--blue-light);
+  box-shadow: 0 8px 20px rgba(180, 198, 255, 0.6);
+  border-radius: 8px;
+  min-width: 180px;
+  flex-direction: column;
+  padding: 0.5rem 0;
+  z-index: 10;
+}
+
+.dropdown-link {
+  color: white;
+  text-decoration: none;
+  padding: 0.8rem 1.2rem;
+  font-size: var(--fs-8);
+  letter-spacing: 0.5px;
+  font-family: 'Poppins', 'sans-serif';
+  transition: background 0.3s, color 0.3s;
+}
+
+.dropdown-link:hover {
+  background: var(--blue-login);
+  color: var(--black-color);
+}
+
+.dropdown-item.active .dropdown-menu {
+  display: flex;
+}
+
+/*BANNER*/
+
+.banner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
 }
